# idsc2026-brugada

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
configs/: base.yml
configs/best/: hgb_baseline.yml  resnet_baseline.yml  spatial_gnn.yml
experiments/: hgb_baseline_eval_seed_42.csv  hgb_baseline_eval_seed_43.csv  hgb_baseline_eval_seed_44.csv  hgb_baseline_eval_seed_45.csv  hgb_baseline_eval_seed_46.csv  hyperparam_search_hgb_baseline_random.csv  hyperparam_search_resnet_baseline_random.csv  hyperparam_search_spatial_gnn_random.csv  model_comparison.csv  resnet_baseline_eval_seed_42.csv  resnet_baseline_eval_seed_43.csv  resnet_baseline_eval_seed_44.csv  resnet_baseline_eval_seed_45.csv  resnet_baseline_eval_seed_46.csv  spatial_gnn_eval_seed_42.csv  spatial_gnn_eval_seed_43.csv  spatial_gnn_eval_seed_44.csv  spatial_gnn_eval_seed_45.csv  spatial_gnn_eval_seed_46.csv
src/: data_loader.py  interpretability.py  preprocessing.py  trainer.py  utils.py
src/models/: hgb_baseline.py  spatial_gnn.py
src/scripts/: compare_models.py  hyperparameter_search.py
