[project]
name = "idsc2026-brugada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "contourpy==1.3.2",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.4.2",
    "cycler==0.12.1",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5 ; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5 ; sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "propcache==0.4.1",
    "pycparser==3.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml>=6.0.3",
    "requests==2.32.5",
    "scikit-learn>=1.7.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "soundfile==0.13.1",
    "sympy==1.14.0",
    "torch==2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "triton==3.6.0 ; sys_platform == 'linux'",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wfdb==4.3.1",
    "yarl==1.23.0",
]